# reviewforge

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.tests  README.md  attach-volume.ps1  azure-pipelines-pr-review.yml  build.ps1  comment.md.example  common.psm1  package-lock.json  package.json  pyproject.toml  pytest.ini  run-local.ps1  run-open-prs-scheduled.ps1  run-open-prs.ps1  run.ps1  setup-open-prs-schedule.ps1  test.ps1  versions.env
docs/: 20260724T100256Z-reviewforge-kickstart-handoff.html  ado-integration-triage.md  ado-integration.md  architecture.md  cli.md  configuration.md  coverage-report.md  deletion-summary.md  handoff-end-user.html  onboarding-team.html  package-guide.md  pipeline.md  python-ado-review-migration.md  reviewforge-deep-analysis.md  semantic-diffing-plan.md  validation-report.md
prompts/: ac-coverage.md  chunk-synthesis.md  context-digest.md  context-plan.md  fast-review-system.md  intent.md  review-system.md  severity.md  verify-findings.md
scripts/: ado_review.py  build.ps1  common.psm1  config.py  main.py  post-findings.mjs  review.py  review.sh  run-open-prs.ps1  run.ps1
standards/: clean-code.md
test/: post-findings.test.mjs  review.test.mjs
tests/: test_ac_coverage.py  test_ado_cli.py  test_ado_client.py  test_ado_review.py  test_cli.py  test_comment_format.py  test_config.py  test_entry_points.py  test_extras.py  test_fast_review.py  test_git_ops.py  test_integration.py  test_model_runner.py  test_ops.py  test_orchestrator.py  test_posting.py  test_reasoning.py  (+11 more)
(+224 files in other folders)
