[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-pr-reviewer"
version = "0.2.0"
description = "Azure DevOps PR review bot"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PR Review Bot maintainers" }]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pydantic>=2.5",
]

[project.scripts]
auto-pr-reviewer = "auto_pr_reviewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auto_pr_reviewer = ["py.typed"]
