[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewforge"
version = "0.3.0"
description = "Azure DevOps ReviewForge"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ReviewForge maintainers" }]
dependencies = [
    "pydantic>=2.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pydantic>=2.5",
]

[project.scripts]
reviewforge = "reviewforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reviewforge = ["py.typed"]
